# Macaulay2Editor--unmaintained-

./: .gitignore  BUILD  CMakeLists.txt  COPYRIGHT  INSTALL  README  editorui.rc  macaulay2.xml  main.cpp
FileBrowserWidget/: CMakeLists.txt  filebrowserwidget.cpp  filebrowserwidget.h
MAutocomplete/: CMakeLists.txt  mautocomplete.cpp  mautocomplete.h  mautocompletewidget.cpp  mautocompletewidget.h
MDocViewer/: CMakeLists.txt  mdocviewer.cpp  mdocviewer.h
MParser/: CMakeLists.txt  mdocumentnode.cpp  mdocumentnode.h  mparser.cpp  mparser.h  mupdatedbthread.cpp  mupdatedbthread.h
MProcess/: CMakeLists.txt  mprocess.cpp  mprocess.h  mprocessshellwidget.cpp  mprocessshellwidget.h  mterminal.cpp  mterminal.h
MSettings/: CMakeLists.txt  msettings.cpp  msettings.h
MStoreDoc/: CMakeLists.txt  mdocvalues.cpp  mdocvalues.h  mstoredoc.cpp  mstoredoc.h
MainWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  meditor.cpp  meditor.h  meditormanager.cpp  meditormanager.h
